--- a/source/_posts/科技前沿/如何自定义文章头部图片.md
+++ b/source/_posts/科技前沿/如何自定义文章头部图片.md
@@ -9,7 +9,7 @@ categories:
 top_img: 'https://s3.qjqq.cn/37/656301ad30812.webp!color'
 cover: 'https://s3.qjqq.cn/37/656301ad30812.webp!color'
 ai: 
- - 这篇文章介绍了一种全新的卡片式外链标签，它可以携带跳转链接的卡片以及不携带跳转链接的卡片。其中，携带跳转链接的卡片必须填写新品主题，并采用全新的简洁风格，使卡片主题生动明朗且可爱。未填写新品主题的卡片则没有跳转链接。
+ - 这篇文章介绍如何自定义文章头部图片的方法，以及如何添加自定义样式来展示这个图片。文章中提到了在 Markdown 中添加 type = "xxx"，然后根据这个类型来添加相应的 HTML 和 CSS 代码来实现自定义样式和图片展示。
 ---
 
 
